# raven-agent

./: .gitattributes  .gitignore  LICENSE  README.md  build.mjs  check_jieba.py  config.example.toml  main.py  package-lock.json  package.json  peer_agents.toml  pyproject.toml
drift/: README.md
mcp_servers/: README.md  echo_server.py  health_server.py  rss_server.py
peerAgent/: README.md
peerAgent/travel-planner/: __init__.py  config.example.toml  config.py  mcp_manager.py  planner.py  prompts.py  pyproject.toml  server.py
plugins/: README.md
plugins/dev_probe/: plugin.py
plugins/hello/: plugin.py
plugins/travel/: LLM_STYLE_PROMPTS.md  __init__.py  _conf_schema.example.json  batch_render.py  plugin.py  renderer.py  schema.py  test_render.py
skills/: README.md
skills/example/: SKILL.md
skills/rss-manage/: SKILL.md
skills/travel-plan/: SKILL.md
src/raven_agent/: __init__.py  agent.py  app.py  config.py  event_bus.py  events.py  lifecycle.py  llm.py  llm_json.py  message_bus.py  messages.py  persistence.py  phase.py  prompt.py  runtime.py  session.py  session_store.py  turn_pipeline.py  workspace.py
static/dashboard/: DESIGN_SPEC.md  app.js  index.html  styles.css
tests/: test_agent.py  test_app.py  test_config.py  test_event_bus.py  test_lifecycle_expansion.py  test_llm.py  test_llm_json.py  test_message_bus.py  test_messages.py  test_phase.py  test_prompt.py  test_runtime.py  test_streaming.py  test_turn_pipeline.py  test_workspace.py
tests/api/: test_dashboard_api.py  test_dashboard_frontend.py  test_observe_backup.py  test_observe_db.py
tests/background/: test_background_runtime.py  test_interrupt.py  test_spawn_completion_flow.py  test_subagent_manager.py  test_subagent_profiles.py
tests/channels/: test_channel_base.py  test_channel_manager.py  (+6 more)
(+218 files in other folders)
