[project]
name = "raven-agent"
version = "0.1.0"
description = "Raven Agent — AI Agent framework with Telegram/CLI channels, long-term memory, proactive push, and peer agent delegation"
readme = "README.md"
authors = [
    { name = "whz" }
]
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "docstring-parser>=0.18.0",
    "fastapi>=0.115.0",
    "faster-whisper>=1.2.1",
    "fastmcp>=2.0.0",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "jinja2>=3.1.6",
    "json-repair>=0.59.10",
    "lxml>=6.1.1",
    "markdownify>=1.2.2",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pillow>=12.2.0",
    "python-telegram-bot>=22.8",
    "pyyaml>=6.0.3",
    "sqlite-vec>=0.1.9",
    "telegramify-markdown>=1.2.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
raven-agent = "raven_agent:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:invalid escape sequence.*:SyntaxWarning:jieba.*",
]
